--- a/index.html
+++ b/index.html
@@ -1,53 +1,168 @@
 <!DOCTYPE html>
 
 <head>
-  <title>Tribute Page</title>
+  <title>Technical Documentation Page</title>
+
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="styles.css">
 </head>
 
 
 <body>
-  <main id="main">
-    <h1 class="text-center" id="title">Grug</h1>
-    <p class="text-center">The caveman who birthed a billion lives</p>
-    <figure id="img-div">
-      <img id="image"
-        src="https://www.thetrumpet.com/files/W1siZiIsIjIwMTcvMDMvMDcvMW0xbm93eHJxN19maWxlIl0sWyJwIiwidGh1bWIiLCIyMDQ4eDIwNDg-Il0sWyJwIiwiZW5jb2RlIiwianBnIiwiLXF1YWxpdHkgODAiXV0/ab0a79e7052e5316/locus_11784.jpg.jpg"
-        alt="Grug is a very important cave man responsible for creating humanity.">
-      <figcaption id="img-caption">
-        Grug was responsible for creating humanity.
-      </figcaption>
-    </figure>
-    <section id="tribute-info">
-      <h3 id="headline">Here's a time line of Grug's life:</h3>
-      <ul>
-        <li><strong>A really long time ago</strong> - Born in a Cave</li>
-        <li>
-          <strong>A little bit later</strong> - Founded first ooga booga
-        </li>
-        <li>
-          <strong>A little bit more later</strong> - Had kids
-        </li>
-        <li>
-          <strong>Closer to our present</strong> - Discovered fire
-        </li>
-        <li>
-          <strong>Day of death</strong> - Got mauled by a sabertooth
-        </li>
-      </ul>
-      <blockquote
-        cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
+  <nav id="navbar">
+    <header>Documentation</header>
+    <ul>
+      <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+      <li>
+        <a class="nav-link" href="#One">One</a>
+      </li>
+      <li>
+        <a class="nav-link" href="#Two">Two</a>
+      </li>
+      <li><a class="nav-link" href="#Three">Three</a></li>
+      <li><a class="nav-link" href="#Four">Four</a></li>
+      <li>
+        <a class="nav-link" href="#Five">Five</a>
+      </li>
+    </ul>
+  </nav>
+  <main id="main-doc">
+    <section class="main-section" id="Introduction">
+      <header>Introduction</header>
+      <article>
         <p>
-          "People will believe anything they see on the internet as long as its wrapped in quotes and has a recognizable
-          person's name below it."
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim metus in mauris finibus
+          pretium. Nulla facilisi. Mauris accumsan dignissim nulla, at malesuada urna efficitur nec. Sed ut dolor
+          vel purus malesuada lacinia. Mauris dapibus, felis nec pulvinar semper, nibh turpis tristique lorem, ut
+          volutpat purus velit non turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos. Nulla eget consectetur ligula, viverra mattis quam.
         </p>
-        <cite>-- Mahatma Gandhi</cite>
-      </blockquote>
-      <h3>
-        If you have time, you should <a id="tribute-link"
-          href="https://getbootstrap.com/docs/5.3/utilities/vertical-align/" target="_blank"></a>read more</a> about
-        Grug and his exploits.
-      </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim metus in mauris finibus
+          pretium. Nulla facilisi. Mauris accumsan dignissim nulla, at malesuada urna efficitur nec. Sed ut dolor
+          vel purus malesuada lacinia. Mauris dapibus, felis nec pulvinar semper, nibh turpis tristique lorem, ut
+          volutpat purus velit non turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos. Nulla eget consectetur ligula, viverra mattis quam.
+        </p>
+        <ul>
+          <li>1</li>
+          <li>1</li>
+          <li>1</li>
+          <li>1</li>
+          <li>1</li>
+        </ul>
+      </article>
+    </section>
+    <section class="main-section" id="One">
+      <header>One</header>
+      <article>
+        <p>Sed at lectus efficitur, efficitur tortor sed, porttitor enim. Vestibulum ornare iaculis leo nec
+          scelerisque. Donec fermentum commodo urna, ut pulvinar nisi. Donec est est, lobortis vel felis vel,
+          vestibulum pretium justo. Aenean in dignissim urna, et maximus tortor. Maecenas blandit mattis enim.
+          Pellentesque aliquam varius vehicula. Donec ac ligula ut metus aliquam suscipit id at quam. Praesent a
+          dictum mauris, eu mattis ligula. Donec vel turpis vel libero eleifend lobortis. Fusce non est auctor,
+          lobortis nisl et, pellentesque dui.</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim metus in mauris finibus
+          pretium. Nulla facilisi. Mauris accumsan dignissim nulla, at malesuada urna efficitur nec. Sed ut dolor
+          vel purus malesuada lacinia. Mauris dapibus, felis nec pulvinar semper, nibh turpis tristique lorem, ut
+          volutpat purus velit non turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos. Nulla eget consectetur ligula, viverra mattis quam.
+        </p>
+        <code>
+            sollicitudin lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vitae nulla sem. Suspendisse potenti. Aenean eros urna, rutrum ut velit sagittis, tempor ultricies sem. Ut finibus, leo vitae condimentum tempor, dolor ipsum faucibus mauris, ut imperdiet justo metus eget dolor. Donec posuere vulputate mi sollicitudin mattis. Suspendisse ut scelerisque lectus. Nulla placerat eleifend justo, sollicitudin bibendum ante malesuada ut. Nullam sit amet est et risus vehicula molestie nec id nibh. 
+          </code>
+      </article>
+    </section>
+    <section class="main-section" id="Two">
+      <header>Two</header>
+      <article>
+        <p>
+          Praesent vitae nisi metus. Morbi efficitur urna lectus, eget egestas eros ultricies at. Suspendisse
+          tincidunt urna quis ex ultrices, id gravida ipsum luctus. Nullam dictum, augue lacinia bibendum
+          ultricies, erat nunc ultricies metus, eu vestibulum velit sapien quis mi. Sed consectetur euismod
+          aliquet. Vestibulum neque arcu, tincidunt ut egestas ac, accumsan et tortor. Class aptent taciti
+          sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi aliquam sit amet massa sit
+          amet elementum. Nam varius erat at arcu congue accumsan. Etiam auctor in risus in auctor. Fusce vel ex
+          in eros vehicula tempus. Sed ornare erat vitae condimentum euismod. Maecenas a viverra augue. Maecenas
+          aliquam eu nunc at blandit. Praesent sollicitudin, neque vel tempus rhoncus, sapien risus accumsan
+          felis, sed ultrices purus nibh sit amet turpis.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim metus in mauris finibus
+          pretium. Nulla facilisi. Mauris accumsan dignissim nulla, at malesuada urna efficitur nec. Sed ut dolor
+          vel purus malesuada lacinia. Mauris dapibus, felis nec pulvinar semper, nibh turpis tristique lorem, ut
+          volutpat purus velit non turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos. Nulla eget consectetur ligula, viverra mattis quam.
+        </p>
+        <code>
+            sollicitudin lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vitae nulla sem. Suspendisse potenti. Aenean eros urna, rutrum ut velit sagittis, tempor ultricies sem. Ut finibus, leo vitae condimentum tempor, dolor ipsum faucibus mauris, ut imperdiet justo metus eget dolor. Donec posuere vulputate mi sollicitudin mattis. Suspendisse ut scelerisque lectus. Nulla placerat eleifend justo, sollicitudin bibendum ante malesuada ut. Nullam sit amet est et risus vehicula molestie nec id nibh. 
+          </code>
+      </article>
+    </section>
+    <section class="main-section" id="Three">
+      <header>Three</header>
+      <article>
+        <p>Mauris sit amet feugiat odio. Maecenas dapibus sem at diam lacinia placerat vitae gravida tellus.
+          Curabitur consectetur facilisis leo, eget sollicitudin libero luctus id. Fusce non tristique metus,
+          facilisis pellentesque lorem. Morbi nec odio leo. Nulla sagittis semper libero ornare consectetur. Nulla
+          eu luctus leo. Suspendisse blandit efficitur mauris sed posuere.
+
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim metus in mauris finibus
+          pretium. Nulla facilisi. Mauris accumsan dignissim nulla, at malesuada urna efficitur nec. Sed ut dolor
+          vel purus malesuada lacinia. Mauris dapibus, felis nec pulvinar semper, nibh turpis tristique lorem, ut
+          volutpat purus velit non turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos. Nulla eget consectetur ligula, viverra mattis quam.
+        </p>
+        <code>
+            sollicitudin lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vitae nulla sem. Suspendisse potenti. Aenean eros urna, rutrum ut velit sagittis, tempor ultricies sem. Ut finibus, leo vitae condimentum tempor, dolor ipsum faucibus mauris, ut imperdiet justo metus eget dolor. Donec posuere vulputate mi sollicitudin mattis. Suspendisse ut scelerisque lectus. Nulla placerat eleifend justo, sollicitudin bibendum ante malesuada ut. Nullam sit amet est et risus vehicula molestie nec id nibh. 
+          </code>
+      </article>
+    </section>
+    <section class="main-section" id="Four">
+      <header>Four</header>
+      <p>
+        Nulla elementum arcu ac tellus pretium, sed rutrum felis euismod. In eu felis consequat lectus ornare
+        egestas vel ac odio. Etiam sit amet nulla tellus. Vestibulum dolor odio, mollis non metus at, tincidunt
+        volutpat erat. Quisque ac hendrerit elit, id euismod ex. Nulla varius efficitur libero non tincidunt. Duis
+        ac augue lorem. Praesent tempor in purus dignissim lobortis. Maecenas sit amet nisi quis risus cursus
+        lacinia.
+      </p>
+      <p>
+        Nulla elementum arcu ac tellus pretium, sed rutrum felis euismod. In eu felis consequat lectus ornare
+        egestas vel ac odio. Etiam sit amet nulla tellus. Vestibulum dolor odio, mollis non metus at, tincidunt
+        volutpat erat. Quisque ac hendrerit elit, id euismod ex. Nulla varius efficitur libero non tincidunt. Duis
+        ac augue lorem. Praesent tempor in purus dignissim lobortis. Maecenas sit amet nisi quis risus cursus
+        lacinia.
+      </p>
+      <code>
+            sollicitudin lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vitae nulla sem. Suspendisse potenti. Aenean eros urna, rutrum ut velit sagittis, tempor ultricies sem. Ut finibus, leo vitae condimentum tempor, dolor ipsum faucibus mauris, ut imperdiet justo metus eget dolor. Donec posuere vulputate mi sollicitudin mattis. Suspendisse ut scelerisque lectus. Nulla placerat eleifend justo, sollicitudin bibendum ante malesuada ut. Nullam sit amet est et risus vehicula molestie nec id nibh. 
+          </code>
+    </section>
+    <section class="main-section" id="Five">
+      <header>Five</header>
+      <article>
+        <p>Sed id sollicitudin lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos. Nunc vitae nulla sem. Suspendisse potenti. Aenean eros urna, rutrum ut velit
+          sagittis, tempor ultricies sem. Ut finibus, leo vitae condimentum tempor, dolor ipsum faucibus mauris,
+          ut imperdiet justo metus eget dolor. Donec posuere vulputate mi sollicitudin mattis. Suspendisse ut
+          scelerisque lectus. Nulla placerat eleifend justo, sollicitudin bibendum ante malesuada ut. Nullam sit
+          amet est et risus vehicula molestie nec id nibh. Suspendisse quis ornare nisl, id bibendum turpis.
+          Aenean ultrices mattis neque, et mattis lectus ultricies nec. Interdum et malesuada fames ac ante ipsum
+          primis in faucibus.</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dignissim metus in mauris finibus
+          pretium. Nulla facilisi. Mauris accumsan dignissim nulla, at malesuada urna efficitur nec. Sed ut dolor
+          vel purus malesuada lacinia. Mauris dapibus, felis nec pulvinar semper, nibh turpis tristique lorem, ut
+          volutpat purus velit non turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos. Nulla eget consectetur ligula, viverra mattis quam.
+        </p>
+        <code>
+            sollicitudin lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vitae nulla sem. Suspendisse potenti. Aenean eros urna, rutrum ut velit sagittis, tempor ultricies sem. Ut finibus, leo vitae condimentum tempor, dolor ipsum faucibus mauris, ut imperdiet justo metus eget dolor. Donec posuere vulputate mi sollicitudin mattis. Suspendisse ut scelerisque lectus. Nulla placerat eleifend justo, sollicitudin bibendum ante malesuada ut. Nullam sit amet est et risus vehicula molestie nec id nibh. 
+          </code>
+      </article>
     </section>
   </main>
 </body>
